style.css
body {
    font-family: Arial, Helvetica, sans-serif;
    margin: 0;
}

/* FOR HEADER SECTION --------------------------------------------*/

a, ul {
    list-style: none;
    text-decoration: none;
    display: flex;
    padding: 0;
    margin: 0;
    gap: 20px;
    font-size: 18px;
    color: #e5e7eb;
}

.header {
    display: flex;
    flex-direction: column;
    padding: 0 300px;
    gap: 100px;
}

.logo {
    font-size: 24px;
    font-weight: 900;
    color: #f9faf8;
}

.top {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-top: 20px;
}

.hero-main {
    font-size: 48px;
    font-weight: 900;
    color: #f9faf8;
}

.hero-text {
    font-size: 18px;
    color: #f9faf8;
    padding: 15px 0;
}

.bottom {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 150px;
    gap: 30px;
}

.sign {
    background-color: #3882f6;
    color: #f9faf8;
    font-size: 18px;
    font-weight: 900;
    border-radius: 10px;
    border-style: none;
    padding: 10px 30px;
}

/* FOR INFO SECTION -----------------------------------------------*/

.title {
    text-align: center;
    font-size: 36px;
    font-weight: 900;
    color: #1f2937;
    padding: 50px;
}

.imagetexts {
    display: flex;
    justify-content: center;
    gap: 60px;
    margin-bottom: 110px;
}

.item {
    max-width: 180px;
    text-align: center;
}

.text {
    font-size: 18px;
    padding-top: 5px;
    color: #616161;
}

.image {
    border-style: solid;
    border-color: #3882f6;
    border-image: fill;
    border-width: 4px;
    border-radius: 50px 15px;
    max-width: 170px;
}

/* FOR QUOTE SECTION -----------------------------------------------*/

.quotesec {
    background-color: #e5e7eb;
    display: flex;
    flex-direction: column;
    padding: 120px 350px;
}

.quote {
    font-size: 36px;
    font-style: italic;
    text-align: justify;
    color: #686868;
}

.signature {
    font-size: 24px;
    font-weight: 900;
    text-align: end;
}

/* FOR SIGNUP SECTION AT BOTTOM PAGE -------------------------------------*/

.signup {
    margin: 100px 270px;
}

.leftside2 {
    color: #f9faf8;
}

.signbox {
    display: flex;
    justify-content: space-around;
    align-items: center;
    background-color: #3882f6;
    border-radius: 10px;
    padding: 45px 0;
}

.actiontext {
    font-size: 24px;
    font-weight: 900;
}

.subtext {
    font-size: 18px;
}

.sign2 {
    color: #f9faf8;
    background-color: #3882f6;
    font-size: 18px;
    font-weight: 900;
    border-style: solid;
    border-color: #f9faf8;
    border-radius: 10px;
    padding: 10px 30px;
}

/* FOOTER SECTION ---------------------------------------------------------*/

.copyright {
    color: #f9faf8;
    font-size: 18px;
    display: flex;
    justify-content: center;
    padding: 40px 0;
}

.header,
.footer {
    background-color: #1f2937;
}

